--- a/sandglass/public/css/main.css
+++ b/sandglass/public/css/main.css
@@ -118,11 +118,14 @@ input:-ms-input-placeholder {
 }
 
 .sandglass__search {
-  padding: .5em .3em;
+  padding: .5em 1.4em;
   text-align: right;
   font-size: .9em;
   font-weight: 200;
   font-family: 'Open Sans', sans-serif;
+  margin: 1.1em -1.1em 0 -1.1em;
+  background-color: #F8F8F8;
+  border-top: 1px solid #f0f0f0;
 }
 
 .sandglass__search-startend {
@@ -138,7 +141,7 @@ input:-ms-input-placeholder {
   background-color: transparent;
   padding-left: 0;
   padding-right: 0;
-  color: #333;
+  color: #949494;
 }
 
 .sandglass__search-start {
@@ -253,7 +256,7 @@ input:-ms-input-placeholder {
 .timeline__group-ul {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: .8em 0 0 0;
 }
 
 .timeline__group-ul:last-child .timeline__item:last-child {
@@ -275,16 +278,12 @@ input:-ms-input-placeholder {
 .timeline__groupHeader {
   font-size: .9em;
   overflow: hidden;
-  padding: .3em 0 .3em 8.3em;
+  padding: .3em 0 .3em 8.5em;
   margin-left: -7.2em;
-  margin-top: .8em;
-  margin-bottom: .2em;
+  margin-bottom: .4em;
   font-family: 'Open Sans', sans-serif;
-  font-weight: 100;
-}
-
-.timeline__groupheader-label {
-  font-weight: 100;
+  font-weight: 400;
+  color: #333;
 }
 
 .timeline__group-duration {
@@ -322,6 +321,10 @@ input:-ms-input-placeholder {
 .timeline__item-end {
   display: none !important;
   right: -1px;
+  background-color: #53B482;
+  color: #fff;
+  text-shadow: 1px 1px #35855B;
+  border-left: 1px solid #35855B;
 }
 
 .timeline__item-end:before {
@@ -348,10 +351,13 @@ input:-ms-input-placeholder {
 
 .timeline__item--edit .timeline__item-edit {
   right: -33px;
+  background-color: #f5f5f5;
+  border-left: 2px solid #53B482;
 }
 
 .timeline__item--edit .timeline__item-delete {
   right: -65px;
+  background-color: #f5f5f5;
 }
 
 .timeline__item--track .timeline__item-end {
@@ -359,7 +365,7 @@ input:-ms-input-placeholder {
 }
 
 .timeline__item--track .timeline__item-delete {
-  display: none !important;
+  display: none;
 }
 
 .timeline__time {
@@ -383,20 +389,19 @@ input:-ms-input-placeholder {
 }
 
 .timeline__headline {
-  font-size: 1.1em;
+  font-size: 1em;
   font-family: 'Open Sans', sans-serif;
   color: #333;
   margin: 0;
   line-height: 1;
   font-weight: 200;
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: top;
   width: 14em;
 }
 
 .timeline__parsedEnded,
 .timeline__parsedStarted {
-  outline: none;
   display: inline-block;
 }
 
