--- a/sandglass/public/css/main.css
+++ b/sandglass/public/css/main.css
@@ -319,12 +319,12 @@ input:-ms-input-placeholder {
 }
 
 .timeline__item-end {
-  display: none !important;
   right: -1px;
   background-color: #53B482;
   color: #fff;
   text-shadow: 1px 1px #35855B;
   border-left: 1px solid #35855B;
+  display: inline-block;
 }
 
 .timeline__item-end:before {
@@ -358,14 +358,6 @@ input:-ms-input-placeholder {
 .timeline__item--edit .timeline__item-delete {
   right: -65px;
   background-color: #f5f5f5;
-}
-
-.timeline__item--track .timeline__item-end {
-  display: inherit !important;
-}
-
-.timeline__item--track .timeline__item-delete {
-  display: none;
 }
 
 .timeline__time {
