--- a/sandglass/public/css/main.css
+++ b/sandglass/public/css/main.css
@@ -107,7 +107,7 @@ input:-ms-input-placeholder {
 /* app */
 .sandglass {
   width: 50em;
-  margin: 0 auto;
+  margin: 0 auto 2em auto;
 }
 
 .sandglass__header {
@@ -570,16 +570,21 @@ svg text {
 /* signup */
 .signup {
   border-top: 3px solid #53B482;
+  width: 30em;
+  margin: 2em auto;
 }
 
 .signup__headline {
   margin: 0 0 .5em 0;
+  font-size: 1.3em;
+  font-weight: 100;
 }
 
 .signup__name,
 .signup__email,
 .signup__password {
   margin-left: 2.95em;
+  border: 1px solid #e4e4e4;
   border-left: none;
 }
 
@@ -595,7 +600,6 @@ svg text {
 
 .signup__password,
 .signup__email {
-  border-top: none;
   width: 18em;
 }
 
@@ -605,13 +609,12 @@ svg text {
   font-family: FontAwesome;
   top: 0;
   left: 0;
-  border: 1px solid #ccc;
-  border-right: 1px solid #e4e4e4;
+  border: 1px solid #e4e4e4;
   height: 101%;
   box-sizing: border-box;
   font-size: 1.2em;
   padding: .3em .8em;
-  color: #53B482;
+  color: #949494;
   width: 2.4em;
 }
 
@@ -621,14 +624,13 @@ svg text {
   font-family: FontAwesome;
   top: 0;
   left: 0;
-  border: 1px solid #ccc;
-  border-right: 1px solid #e4e4e4;
+  border: 1px solid #e4e4e4;
   border-top: none;
   height: 101%;
   box-sizing: border-box;
   font-size: 1.1em;
   padding: .4em .88em;
-  color: #53B482;
+  color: #949494;
   width: 2.6em;
 }
 
@@ -638,14 +640,13 @@ svg text {
   font-family: FontAwesome;
   top: 0;
   left: 0;
-  border: 1px solid #ccc;
-  border-right: 1px solid #e4e4e4;
+  border: 1px solid #e4e4e4;
   border-top: none;
   height: 101%;
   box-sizing: border-box;
   font-size: 1.1em;
   padding: .4em .88em;
-  color: #53B482;
+  color: #949494;
   width: 2.6em;
 }
 
