--- a/sandglass/public/css/main.css
+++ b/sandglass/public/css/main.css
@@ -39,7 +39,7 @@ button {
   background-color: #53B482;
   color: #fff;
   border-color: #438F68;
-  padding: .6em 1.26em;
+  padding: .65em 1.3em;
   margin: 0;
 }
 
@@ -111,10 +111,8 @@ input:-ms-input-placeholder {
 }
 
 .sandglass__header {
-  padding: .2em 1.6em .8em;
-  background-color: #53B482;
+  padding: .3em 1.6em .8em 1em;
   margin-left: -6.5em;
-  color: #fff;
 }
 
 .sandglass__search {
@@ -123,9 +121,9 @@ input:-ms-input-placeholder {
   font-size: .9em;
   font-weight: 200;
   font-family: 'Open Sans', sans-serif;
-  margin: 1.1em -1.1em 0 -1.1em;
-  background-color: #F8F8F8;
-  border-top: 1px solid #f0f0f0;
+  margin: 1.4em -1.1em 0 -1.1em;
+  background-color: #fff;
+  border-top: 1px solid #438F68;
 }
 
 .sandglass__search-startend {
@@ -194,7 +192,11 @@ input:-ms-input-placeholder {
   vertical-align: middle;
   padding: .3em 0 0 0;
   margin: 0;
-  font-size: 1.6em;
+  font-size: 1.4em;
+}
+
+.sandglass__headline > .fa {
+  color: #438F68;
 }
 
 .sandglass__timeline-filter {
@@ -213,10 +215,11 @@ input:-ms-input-placeholder {
 
 /* tracking */
 .track {
-  background-color: #fff;
   margin-left: -6.5em;
-  padding: 1em 1em 0 1em;
-  color: #333;
+  padding: 1.3em 1em 0 1em;
+  color: #fff;
+  background-color: #53B482;
+  border-top: 3px solid #438F68;
 }
 
 .track__field--inline {
@@ -227,15 +230,27 @@ input:-ms-input-placeholder {
 .track__task,
 .track__project,
 .track__description {
-  color: #333;
-  background-color: #f8f8f8;
+  color: #fff;
+  background-color: #47976E;
   border: none;
-  border-left: 2px solid #53B482;
-  font-size: 1em;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 100;
+}
+
+.track__task::-webkit-input-placeholder,
+.track__project::-webkit-input-placeholder,
+.track__description::-webkit-input-placeholder {
+  color: #E2F8ED;
+}
+
+.track__task:focus,
+.track__project:focus,
+.track__description:focus {
+  background-color: #3E7C5C;
 }
 
 .track__task {
-  width: 8em;
+  width: 10em;
 }
 
 .track__project {
@@ -247,9 +262,15 @@ input:-ms-input-placeholder {
 }
 
 .track__button {
-  border-left: 0;
-  padding-left: 2.395em;
-  padding-right: 2.395em;
+  padding-left: 2.2em;
+  padding-right: 2.2em;
+  color: #fff;
+  background-color: #63C994;
+}
+
+.track__button:hover,
+.track__button:focus {
+  background-color: #47976E;
 }
 
 /* timeline */
@@ -257,10 +278,6 @@ input:-ms-input-placeholder {
   list-style: none;
   padding: 0;
   margin: .8em 0 0 0;
-}
-
-.timeline__group-ul:last-child .timeline__item:last-child {
-  border-radius: 0 0 4px 4px;
 }
 
 .timeline__item {
@@ -308,8 +325,8 @@ input:-ms-input-placeholder {
 }
 
 .timeline__item-delete {
-  right: -1px;
-  transition: right .3s ease-in-out;
+  right: -65px;
+  background-color: #f5f5f5;
 }
 
 .timeline__item-delete:before {
@@ -322,8 +339,8 @@ input:-ms-input-placeholder {
   right: 0;
   background-color: #53B482;
   color: #fff;
-  text-shadow: 1px 1px #35855B;
-  border-left: 1px solid #35855B;
+  text-shadow: 1px 1px #438F68;
+  border-left: 1px solid #438F68;
   display: inline-block;
 }
 
@@ -340,8 +357,10 @@ input:-ms-input-placeholder {
 }
 
 .timeline__item-edit {
-  right: 31px;
-  transition: right .3s ease-in-out;
+  right: -35px;
+  background-color: #f5f5f5;
+  border-left: 3px solid #53B482;
+  border-right: 1px solid #f0f0f0;
 }
 
 .timeline__item-edit:before {
@@ -350,20 +369,16 @@ input:-ms-input-placeholder {
   display: inline-block;
 }
 
+.timeline__item-edit:hover,
+.timeline__item-edit:focus,
+.timeline__item-delete:hover,
+.timeline__item-edit:focus {
+  background-color: #fff;
+}
+
 .timeline__item--edit .timeline__item-edit,
 .timeline__item--edit .timeline__item-delete {
   display: inherit;
-}
-
-.timeline__item--edit .timeline__item-edit {
-  right: -33px;
-  background-color: #f5f5f5;
-  border-left: 2px solid #53B482;
-}
-
-.timeline__item--edit .timeline__item-delete {
-  right: -65px;
-  background-color: #f5f5f5;
 }
 
 .timeline__time {
@@ -424,7 +439,7 @@ input:-ms-input-placeholder {
   line-height: 1.6;
   display: inline-block;
   vertical-align: top;
-  width: 38em;
+  width: 42.5em;
   margin: 0;
 }
 
@@ -659,16 +674,12 @@ svg text {
   display: inline-block;
   font-size: .8em;
   float: right;
-  margin: .8em 0 0 0;
+  margin: .6em 0 0 0;
 }
 
 .user__userinfo {
   display: inline-block;
   margin: 0 0 0 .5em;
-}
-
-.user__logout {
-  color: #fff;
 }
 
 .user__image {
@@ -677,8 +688,6 @@ svg text {
   width: 30px;
   height: 30px;
   background-color: #e4e4e4;
-  background-image: linear-gradient( to bottom, #F7F7F7, #e4e4e4 );
-  border: 1px solid #fff;
 }
 
 .user__name {
