--- a/sandglass/public/css/main.css
+++ b/sandglass/public/css/main.css
@@ -725,7 +725,14 @@ svg text {
   display: inline-block;
   font-size: .8em;
   float: right;
-  margin: .6em 0 0 0;
+  margin: .6em -2em 0 0;
+  position: relative;
+}
+
+.user__settings {
+  background-color: #fff;
+  padding: 1em;
+  margin-left: -5.5em;
 }
 
 .user__userinfo {
