unify form classes in track view

--- a/sandglass/public/css/less/lib/form.less
+++ b/sandglass/public/css/less/lib/form.less
@@ -8,11 +8,16 @@
   border-color: #843534;
 }
 
+.form--inline .form__group {
+  display: inline-block;
+  vertical-align: middle;
+}
+
 .form__group {
   padding: .5em 0;
 }
 
-.form__group--hidden {
+.form .form__group--hidden {
   display: none;
 }
 
