--- a/sandglass/public/css/less/lib/app.less
+++ b/sandglass/public/css/less/lib/app.less
@@ -18,7 +18,7 @@ h5,
 h6 {
   padding: 0;
   margin: 0 0 .3em 0;
-  font-family: 'Open sans', sans-serif;
+  font-family: @highlight-font;
   font-weight: 200;
 }
 
