--- a/sandglass/public/css/less/lib/variables.less
+++ b/sandglass/public/css/less/lib/variables.less
@@ -1,6 +1,7 @@
 @background-color: rgb( 240, 240, 240 );
 @font-color: rgb( 51, 51, 51 );
 @hightlight-color: rgb( 94, 160, 33 );
+@highlight-font: 'Open sans', serif;
 
 @app-background-color: rgb( 255, 255, 255 );
 
