enhance less entry point

--- a/sandglass/public/css/less/main.less
+++ b/sandglass/public/css/less/main.less
@@ -1,3 +1,4 @@
-@import "lib/form";
-@import "lib/app";
-@import "lib/timeline";
+@import "lib/variables.less";
+@import "lib/form.less";
+@import "lib/app.less";
+@import "lib/timeline.less";
